[package]
name = "distill"
version = "0.1.0"
edition = "2021"
description = "AI-powered git commit message generator"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "distill"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4" 